# Racing2D_Qt-Cpp

./: .gitignore  CMakeLists.txt  README.md  Racing2D.pro  car.h  game.cpp  game.h  gamescene.cpp  gamescene.h  resource.qrc
src/: game.cpp  game.h  main.cpp
